--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "api for project web",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon server/server.js",
+    "test": "env-cmd -f ./.env nodemon server/server.js",
     "start": "node server/server.js"
   },
   "author": "",
@@ -13,8 +13,11 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.10.0",
-    "underscore": "^1.13.6"
+    "underscore": "^1.13.6",
+    "validator": "^13.11.0"
   }
 }
