--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 JWT_KEY=WinterIsComingGOT2019
 PORT=3000
+PASSWORD=bgli epdl ezwm lcrd
+API_KEY=AIzaSyDDbO1UK26pT2X7FYiI3eRI1PLej10U_EA
+CORREO=bibliofilia.atencion@gmail.com
