--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "google-auth-library": "^9.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.10.0",
+    "nodemailer": "^6.9.7",
     "underscore": "^1.13.6",
     "validator": "^13.11.0"
   }
